kubernetees/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: onlineeventbookingzakariyaabbas
