kubernetees/deployment-service-booking.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: onlineeventbookingzakariyaabbas
spec:
  selector:
    app: booking-service
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  namespace: onlineeventbookingzakariyaabbas
  labels:
    app: booking-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
        - name: booking-service
          image: zakariyaabbas/booking-service:latest
          ports:
            - containerPort: 4000
