kubernetees/deployment-service-event.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-service
  namespace: onlineeventbookingzakariyaabbas
spec:
  selector:
    app: event-service
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service
  namespace: onlineeventbookingzakariyaabbas
  labels:
    app: event-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: event-service
  template:
    metadata:
      labels:
        app: event-service
    spec:
      containers:
        - name: event-service
          image: zakariyaabbas/event-service:latest
          ports:
            - containerPort: 5000
