kubernetees/deployment-service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end
  namespace: onlineeventbookingzakariyaabbas
spec:
  selector:
    app: front-end
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 31730  # You can customize this port
  type: NodePort

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end
  namespace: onlineeventbookingzakariyaabbas
  labels:
    app: front-end
spec:
  replicas: 2
  selector:
    matchLabels:
      app: front-end
  template:
    metadata:
      labels:
        app: front-end
    spec:
      containers:
        - name: front-end
          image: zakariyaabbas/front-end:latest
          ports:
            - containerPort: 80
