kubernetees/deployment-service-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: onlineeventbookingzakariyaabbas
spec:
  selector:
    app: frontend-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-service
  namespace: onlineeventbookingzakariyaabbas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-service
  template:
    metadata:
      labels:
        app: frontend-service
    spec:
      containers:
        - name: frontend-service
          image: zakariyaabbas/frontend-service:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "128Mi"
              cpu: "250m"
