kubernetees/deployment-service-mongodb.yaml

apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: onlineeventbookingzakariyaabbas
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: onlineeventbookingzakariyaabbas
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:6
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-pvc
