kubernetees/deployment-service-notification.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: onlineeventbookingzakariyaabbas
spec:
  selector:
    app: notification-service
  ports:
    - protocol: TCP
      port: 6000
      targetPort: 6000
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: onlineeventbookingzakariyaabbas
  labels:
    app: notification-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: zakariyaabbas/notification-service:latest
          ports:
            - containerPort: 6000
