kubernetees/deployment-service-notification.yml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: onlineeventbookingzakariyaabbas
spec:
  selector:
    app: notification-service
  ports:
    - protocol: TCP
      port: 6000
      targetPort: 6000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: onlineeventbookingzakariyaabbas
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: zakariyaabbas/notification-service:latest
          ports:
            - containerPort: 6000
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
