kubernetees/deployment-service-user.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: onlineeventbookingzakariyaabbas
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: onlineeventbookingzakariyaabbas
  labels:
    app: user-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: zakariyaabbas/user-service:latest 
          ports:
            - containerPort: 3000
