kubernetees/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onlineeventbooking-ingress
  namespace: onlineeventbookingzakariyaabbas
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"  # Set to true if you want HTTPS
spec:
  rules:
  - host: zakariya-abbas.com  # This is the domain you want to use
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /api/users
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 3000
      - path: /api/events
        pathType: Prefix
        backend:
          service:
            name: event-service
            port:
              number: 5000
      - path: /api/booking
        pathType: Prefix
        backend:
          service:
            name: booking-service
            port:
              number: 4000
